# TabulaRasa

./: .config.just  .gitignore  .justfile  Cargo.toml  README.md  ROADMAP.txt  go.mod  go.sum  main.go  mbombo.md
.just/: go.conf
cmd/: cmdCobra.go  cmdCobraApp.go  cmdCobraCmd.go  cmdCobraUtil.go  cmdCompletion.go  cmdDeploy.go  cmdDeployJust.go  cmdDeployReadme.go  cmdDeployTodor.go  cmdEngrave.go  cmdEtch.go  cmdIdentity.go  cobra.go  deploy.go  docs.json  execCmd.go  root.go  typeParamsCR.go  typeRep.go  typeReplacement.go  util.go  utilCat.go  utilConcatenate.go  utilCopy.go  utilCopyDir.go  utilCopyFile.go  utilCopyReplace.go  utilCreateDirIfNotExist.go  utilDetectLicense.go  utilDirExist.go  utilEtch.go  utilExample.go  utilForge.go  utilHelp.go  utilLineBreaks.go  utilReadmeTUI.go  utilReplace.go  utilReplacements.go  utilReps.go
cobra/: copy.sh  main.go  replace.sh
cobraApp/: main.go
cobraCmd/: cmdTemplate.go
cobraUtil/: utilCaptureExecCmd.go  utilCurrentDir.go  utilExample.go  utilExecCmd.go  utilExecCmdCapture.go  utilFindHome.go  utilHelp.go  utilListFiles.go  utilShellCall.go  utilWalk.go
juliaUtil/: fileStructure.jl  ioDataFrame.jl  paths.jl  similarity.jl
just/: R.just  README.md  config.just  go.conf  go.just  go.justfile  golib.just  head.just  head.justfile  jl.just  julia.justfile  py.conf  py.just  pyinstall.sh  rs.just  rust.justfile  rustfmt.toml
readme/: 01overview.md  02go_install.md  02jl_install.md  02rs_install.md  03usage.md  04go_dev.md  04jl_dev.md  04rs_dev.md  05faq.md  05license.md  README.md
src/: bin.rs  cli.rs  cmd.rs  (+4 more)
(+68 files in other folders)
