[package]
name = "tab"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Coyote"
keywords = []
categories = []
readme = "README.md"
description = ""
edition = "2024"


[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
regex = "1"
