[package]
name = "tabularasa"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/TabulaRasa"
keywords = []
categories = []
readme = "README.md"
description = ""
edition.workspace = true

[[bin]]
name = "tab"
path = "src/main.rs"


[dependencies]
issac = { path = "../issac" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dirs = "6"
regex = "1"
